4 files modified, 1 added

--- a/midterms/mid-serve-static/public/blog.html
+++ b/midterms/mid-serve-static/public/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Page</title>
+    <title>Blog Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,8 +16,10 @@
       <a href="upload.html">Upload</a>
     </div>
     <h1>WCSERVER</h1>
-    <h1>This is the Contact page.</h1>
-    <p>You can contact me here:</p>
-    <h4 style="text-decoration: underline">09293853466</h4>
+    <h1>This is the Blog page.</h1>
+    <p>
+      My name is Joshua Ezekiel T. Limiac<br />BS Information Technology Major
+      in Web Development.
+    </p>
   </body>
 </html>
