--- a/midterms/mid-serve-static/public/about.html
+++ b/midterms/mid-serve-static/public/about.html
@@ -16,6 +16,6 @@
       <a href="upload.html">Upload</a>
     </div>
     <h1>WCSERVER</h1>
-    <h1>This is the About page.</h1>
+    <h3>This is about page.</h3>
   </body>
 </html>
