--- a/midterms/mid-act/public/about.html
+++ b/midterms/mid-act/public/about.html
@@ -59,7 +59,14 @@
       <a href="upload.html">Upload</a>
     </div>
 
-    <h3>Error 404 page not found.</h3>
-    <h2>WCSERVER</h2>
+    <h1>About Me</h1>
+    <p>
+      <h4>Name: Limiac, Joshua Ezekiel T.</h4>
+      <h4>Section: WD - 201</h4>
+
+      Hi There, this page is mine and you've come in the right place to know about me. my name is renz this is 
+      my first basic routing site.
+
+    </p>
   </body>
 </html>
