--- a/midterms/mid-act/public/contact.html
+++ b/midterms/mid-act/public/contact.html
@@ -58,9 +58,10 @@
       <a href="about.html">About</a>
       <a href="upload.html">Upload</a>
     </div>
-    <form action="http://127.0.0.1:3000/process_get" method="GET">
+    <form action="http://localhost:3000/process_post" method="post">
       First Name: <input type="text" name="first_name" /> <br />
       Last Name: <input type="text" name="last_name" />
+      Subject: Message: Email:
       <input type="submit" value="Submit" />
     </form>
   </body>
