--- a/midterms/mid-act/public/index.html
+++ b/midterms/mid-act/public/index.html
@@ -61,6 +61,6 @@
 
     <h3>This is The Home</h3>
     <h2>WCSERVER</h2>
-    <h2>Vitug, Renz D.</h2>
+    <h2>Limiac, Joshua Ezekiel T.</h2>
   </body>
 </html>
