--- a/midterms/mid-act/uploads/file-uploaded.html
+++ b/midterms/mid-act/uploads/file-uploaded.html
@@ -59,6 +59,6 @@
       <a class="active" href="upload.html">Upload</a>
     </div>
 
-    <h2>File uploaded :D</h2>
+    <h2>File uploaded Successfully</h2>
   </body>
 </html>
