--- a/midterms/mid-act/public/about.html
+++ b/midterms/mid-act/public/about.html
@@ -64,7 +64,7 @@
       <h4>Name: Limiac, Joshua Ezekiel T.</h4>
       <h4>Section: WD - 201</h4>
 
-      Hi There, this page is mine and you've come in the right place to know about me. my name is renz this is 
+      Hi There, this page is mine and you've come in the right place to know about me. my name is Joshua this is 
       my first basic routing site.
 
     </p>
